[package]
name = "m3u8-downloader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
aes = "0.7.4"
block-modes = "0.8.1"
bytes = "0.5.6"

[profile.release]
opt-level = 'z'
lto = true