[package]
name = "m3u8-downloader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
aes = "0.7.4"
block-modes = "0.8.1"
bytes = "1.4.0"
tokio = {version = "1.28.1", features = ["full"]}
anyhow = { version = "1.0"}
base64= { version = "0.21.0" }

[profile.release]
opt-level = 'z'
lto = true
strip = true # Remove debug symbols
